# fx-ai

./: .gitignore  .ideavimrc  CAPTUM_FIX_SUMMARY.md  CLAUDE.md  INITIALIZATION_LOG_ANALYSIS.md  README.md  Sample_Data.csv  TRAINING_MANAGER_IMPLEMENTATION.md  build_index.py  dashboard.md  dashboard.py  dashboard_server_old_backup.py.bak  debug_attribution.py  debug_reward_system.py  file_historic_test.py  main-v2.py  main.py  main_continuous.py  notes.md  optuna_integration.py  optuna_optimization.py  optuna_studies.db  pyproject.toml  pyrightconfig.json  requirements.txt  run_sweep.py  sweep_config.yaml  sweep_studies.db  test.py  test_reward_fix.py  test_reward_v2.py  todo.md  training_logs.txt  validate_pnl_flow.py  vscode-vim-settings.json
.claude/: settings.local.json
.dummy_data_cache/: AAPL_daily_20250515_20250516.pkl  MLGO_bars_1m_20250327_20250328.pkl  MLGO_bars_1s_20250327_20250328.pkl  MLGO_bars_5m_20250327_20250328.pkl  MLGO_daily_2024-03-27_2025-03-27.pkl  MLGO_daily_2024-03-27_2025-03-28.pkl  MLGO_daily_2025-03-27_2025-03-27.pkl  MLGO_daily_2025-03-27_2025-03-28.pkl  MLGO_daily_20250515_20250516.pkl  MSFT_daily_20250515_20250516.pkl  NVDA_daily_20250515_20250516.pkl  TSLA_daily_20250515_20250516.pkl
.run/: main.run.xml
agent/: attribution_callback.py  base_callbacks.py  callbacks.py  captum_callback.py  continous_training_callback.py  continous_training_callbacks.py  continuous_training_callbacks.py  dashboard_callback.py  optuna_callback.py  ppo_agent.py  replay_buffer.py  trainer.py  utils.py  wandb_callback.py
ai/: layers.py  networks.py  transformer.py
callbacks/: __init__.py  continuous_training_callback.py  evaluation_callback.py  optuna_callback.py
config/: MIGRATION_GUIDE.md  __init__.py  benchmark.yaml  config.py  config.yaml  loader.py  path_config.py  quck_test.yaml  schemas.py  training-default.yaml
core/: __init__.py  evaluation.py  model_manager.py  model_state.py  path_manager.py  shutdown.py  types.py  utils.py
dashboard/: README.md  __init__.py  dashboard.py  dashboard_data.py  dashboard_integration.py  dashboard_server.py  dashboard_server.py.backup  event_stream.py  live_dashboard.py  live_dashboard_v2.py  shared_state.py
data/: __init__.py  data_manager.py  data_processor.py  feature_cache_manager.py  file_historic_test.py
docs/: 3_PHASE_OPTUNA_IMPLEMENTATION.md  COMPLETE_FEATURE_AND_MODEL_GUIDE.md  COMPREHENSIVE_SHAP_USAGE_GUIDE.md  FEATURE_REGISTRY_IMPLEMENTATION.md  OPTUNA_HYPERPARAMETER_OPTIMIZATION_GUIDE.md  POE_TASKS.md  attribution_troubleshooting.md  comprehensive_shap_attribution_guide.md  data_layer_redesign.md  environment_design.md  environment_plan.md  environment_redesign_guide.md  environment_redesign_v2.md  environment_redesign_v3_advanced.md  environment_redesign_v4_simple.md  feature_attribution_guide.md  feature_engineering_guide.md  feature_implementation_summary.md  feature_improvement_recommendations.md  feature_system.md  feature_system_design.md  feature_system_plan.md  features.md  market_simulator_adjustments.md  market_simulator_design.md  market_simulator_refactor_design.md  metrics.md  metrics_system_plan.md  model_manager_improvements.md  optuna_refactoring_summary.md  output_directories.md  pytorch_lightning_callback_refactoring.md  pytorch_lightning_implementation_guide.md  pytorch_lightning_integration_plan.md  rewards_system_plan.md  todo.md  training_insights.md
envs/: README.md  RewardCalculator.py  __init__.py  action_mask.py  action_masking.py  dashboard.tcss  day_manager.py  env_dashboard.py  environment_simulator.py  market_simulator.py  momentum_episode_manager.py  order_execution.py  portfolio_simulator.py  reward.py  trading_env.py  trading_environment.py  trading_environment_original.py  trading_reward.py  trading_simulator.py
feature/: __init__.py  contexts.py  feature_adapter.py  feature_base.py  feature_extractor.py  feature_manager.py  feature_pipeline.py  feature_registry.py  load_features.py  normalizers.py  simple_feature_manager.py  state_manager.py
metrics/: core.py  factory.py  manager.py
metrics_deprecated/: core.py  factory.py  manager.py
model/: transformer.py
models/: layers.py  networks.py  transformer.py
optuna/: integration.py  optimization.py  studies.db
optuna_results/: fx_ai_foundation_results.json
rewards/: __init__.py  calculator.py  components.py  core.py  metrics.py
scripts/: build_index.py  debug_attribution.py  run.py  scan_momentum_days.py  start_wandb.sh  sweep.py  sweep_wrapper.py  test_captum_analysis.py  test_captum_callback.py  test_feature_consistency.py  test_market_simulator_v3.py  test_new_data_layer.py  test_percentage_reward_system.py  test_training_manager_panel.py  transfer_best_params.py  validate_pnl_flow.py
simulation/: execution_simulator.py  market_simulator.py  portfolio_simulator.py  simulator.py
simulators/: __init__.py  execution.simulator.py  execution_simulator.py  market_simulator.py  market_simulator_v2.py  portfolio.simulator.py  portfolio_simulator.py
strategies/: sma_crossover.py
sweep_engine/: integration.py  optimization.py
sweep_results/: fx_ai_foundation_results.json
tests/: conftest.py  test_aggregated_sequence_utilization.py  test_callback_disabling.py  test_execution_simulator.py  test_feature_extractor.py  test_feature_implementations.py  test_feature_system.py  test_features_comprehensive.py  test_integration.py  test_market_simulator.py  test_point_time_features.py  test_portfolio_simulator.py  test_reward_metrics.py  test_reward_system.py  test_sequence_validation.py  test_temporal_consistency.py  test_trading_environment.py  test_training_manager.py  tests_market_sim.py
training/: adaptive_data_manager.py  continuous_training.py  data_lifecycle_manager.py  episode_manager.py  training_manager.py
utils/: graceful_shutdown.py  logger.py  logging_utils.py  model_analysis.py  model_manager.py  monitoring.py  wandb_reports.py
v2/: AGENT_REFACTOR_SUMMARY.md  ARCHITECTURE.md  INTERFACE_IMPROVEMENTS.md  README.md  __init__.py  main.py
visualization/: __init__.py  dashboard.py  (+1 more)
(+1280 files in other folders)
