[tool.poetry]
name = "fx-ai"
version = "0.1.0"
description = ""
authors = ["XVll <onur@onurx.com>"]
readme = "README.md"
package-mode = false

[tool.poe.tasks]
# Momentum Training (RECOMMENDED)
train = "poetry run python main.py --config momentum_training"
train-continue = "poetry run python main.py --config momentum_training --continue"
build-index = "poetry run python scripts/build_index.py"

# Legacy Training (standard single-day training)
quick = "poetry run python main.py --config quick_test"
init = "poetry run python main.py"

# Backtest
backtest = "poetry run python main.py --config backtest"
backtest-date = "poetry run python main.py --config backtest --date {{date}}"

# Scan for momentum days in data
scan = "poetry run python data/scanner/momentum_scanner.py --min-quality 0.5"
scan-high = "poetry run python data/scanner/momentum_scanner.py --min-quality 0.7"
scan-all = "poetry run python data/scanner/momentum_scanner.py --min-quality 0.0"

# 3-Phase Hyperparameter Optimization with Optuna
optuna-foundation = "poetry run python optuna/optimization.py --spec config/optuna/phase1_foundation.yaml"
optuna-reward = "poetry run python optuna/optimization.py --spec config/optuna/phase2_reward.yaml"
optuna-finetune = "poetry run python optuna/optimization.py --spec config/optuna/phase3_finetune.yaml"
optuna-dashboard = "optuna-dashboard sqlite:///optuna/studies.db"
optuna-best = "poetry run python optuna/optimization.py --show-best {{study_name}}"
optuna-results = "poetry run python optuna/optimization.py --show-results"
optuna-status = "poetry run python scripts/transfer_best_params.py --status"
optuna-transfer-1to2 = "poetry run python scripts/transfer_best_params.py --from-phase 1 --to-phase 2"
optuna-transfer-2to3 = "poetry run python scripts/transfer_best_params.py --from-phase 2 --to-phase 3"

# Testing & Linting
test = "poetry run pytest -v"
test-fast = "poetry run pytest --tb=short"
lint = "poetry run pyright ."
lint-fix = "poetry run ruff check --fix ."
format = "poetry run ruff format ."

# Utility Tasks
clean = "rm -rf outputs/* wandb/* __pycache__"
setup = "wandb login"
dashboard = "echo 'Dashboard will auto-launch during training at http://localhost:8051'"
killport = "lsof -ti:8051 | xargs kill -9 || echo 'Port 8051 already free'"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.2.5"
pandas = "^2.2.3"
wandb = "^0.19.11"
gymnasium = "^1.1.1"
matplotlib = "^3.10.3"
databento = "^0.54.0"
poetry-core = ">=1.0.0"
ta = "^0.11.0"
torch = "^2.7.0"
rich = "^14.0.0"
pydantic = "^2.11.5"
setuptools = "==80.8.0"
dash = "^3.0.4"
plotly = "^6.1.1"
tqdm = "^4.67.1"
shap = "^0.46.0"
seaborn = "^0.13.0"
optuna = "^4.1.0"
optuna-dashboard = "^0.18.0"
joblib = "^1.4.2"
scikit-learn = "^1.6.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.0"
pytest = "^7.0"
coverage= "^7.8.2"
ruff = "^0.11.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"